nassh: Implement an extensible SSH agent
The Agent class takes requests from the SSH client and passes them on to
a set of dynamically registered backends. The responses from the
backends are aggregated and reported back to the client. In the
connection dialog, the user can choose the backends used by Agent by
providing a list of backend IDs separated by commas as the value of the
--ssh-agent relay option.

So far, only the requests SSH_AGENTC_REQUEST_IDENTITIES and
SSH_AGENTC_SIGN_REQUEST are supported, together with their respective
responses.

This change is backwards-compatible: If the value of --ssh-agent is just
an extension ID, the old SSHAgentRelay is used instead of the new
SSHAgent.

The implementation introduces the following new classes:

 * nassh.agent.Agent: Initializes the backends, relays the requests to
    them and bundles up the responses.
 * nassh.agent.Agent.UserIO: Provides backends with uniform access to
    terminal IO.
 * nassh.agent.Backend: A minimal implementation of a backend which all
    other backends should derive from. It provides a backend under the
    ID 'stub' which can be used for testing purposes.
 * nassh.agent.Message: Parses and writes messages used in the SSH agent
    protocol.
 * nassh.Stream.SSHAgent: Inherits from nassh.Stream and relays raw SSH
    agent requests to the Agent class.

BUG=chromium:712699
Change-Id: I0a4dfc6681839518f98d9ed461479fd5a461d6bd

--- a/nassh/manifest.json
+++ b/nassh/manifest.json
@@ -44,6 +44,7 @@
       "js/nassh_stream.js",
       "js/nassh_stream_set.js",
       "js/nassh_stream_tty.js",
+      "js/nassh_stream_sshagent.js",
       "js/nassh_stream_sshagent_relay.js",
       "js/nassh_stream_google_relay.js",
       "js/nassh_google_relay.js",
@@ -52,6 +53,10 @@
       "js/nassh_sftp_packet_types.js",
       "js/nassh_sftp_status.js",
       "js/nassh_sftp_fsp.js",
+      "js/nassh_agent_message.js",
+      "js/nassh_agent_message_types.js",
+      "js/nassh_agent.js",
+      "js/nassh_agent_backend.js",
       "js/nassh_command_instance.js",
       "js/nassh_background.js"
     ]
