Clean up package.json
Change-Id: Ia5b1b1371886c207e55c3a9c71316b4c8f9ac20f

--- a/nassh/package.json
+++ b/nassh/package.json
@@ -6,16 +6,14 @@
   "directories": {
     "doc": "doc"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "asn1js": "^2.0.15",
-    "pkijs": "^2.1.5"
-  },
   "dependencies": {
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "asn1js": "2.0.15",
+    "pkijs": "2.1.5"
+  },
+  "devDependencies": {
+    "rollup": "0.50.0",
+    "rollup-plugin-node-resolve": "3.0.0"
   }
 }
