--- a/nassh/manifest_v1.5.json
+++ b/nassh/manifest_v1.5.json
@@ -46,6 +46,7 @@
       "js/nassh_agent.js",
       "js/nassh_agent_backend.js",
       "js/nassh_agent_backend_gsc.js",
+      "js/nassh_agent_backend_gsc.concat.js",
       "js/nassh_preference_manager.js",
       "js/nassh_stream.js",
       "js/nassh_stream_set.js",
