--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
   "devDependencies": {},
   "dependencies": {
     "asn1js": "~2",
+    "chai": "~4",
     "csso": ">=3",
-    "csso-cli": ">=1",
+    "csso-cli": ">=2",
     "eslint": "~5",
+    "firebase-tools": ">=6.3",
+    "jsdom": "~13",
+    "mocha": "~5",
     "pkijs": "~2.1",
     "rollup": ">=0.60",
     "rollup-plugin-node-resolve": ">=3.3",
-    "uglify-js": "~3"
+    "rollup-plugin-terser": ">=4",
+    "terser": "~3"
   },
   "bugs": {
     "url": "https://crbug.com/new",
