nassh: harmonize script load ordering
We're inconsistent between the manifests, main page, and test page
when it comes to the order of loading scripts.  This causes issues
when we try to add new APIs and it works in one context but not in
the others.  Try to use the same order across all of them.

Change-Id: If43fe65e0789fe4400bd524251724ca9f49f1952
Reviewed-on: https://chromium-review.googlesource.com/c/1453976
Reviewed-by: Vitaliy Shipitsyn <vsh@google.com>
Tested-by: Mike Frysinger <vapier@chromium.org>

--- a/nassh/manifest_v1.5.json
+++ b/nassh/manifest_v1.5.json
@@ -38,30 +38,31 @@
   "background": {
     "persistent": false,
     "scripts": [
-      "third_party/google-smart-card/google-smart-card-client-library.js",
       "js/nassh_deps.concat.js",
+      "third_party/google-smart-card/google-smart-card-client-library.js",
       "js/nassh.js",
-      "js/nassh_app.js",
+      "js/nassh_agent_message.js",
+      "js/nassh_agent_message_types.js",
+      "js/nassh_agent.js",
+      "js/nassh_agent_backend.js",
+      "js/nassh_agent_backend_gsc.js",
       "js/nassh_preference_manager.js",
       "js/nassh_stream.js",
       "js/nassh_stream_set.js",
       "js/nassh_stream_tty.js",
+      "js/nassh_stream_google_relay.js",
       "js/nassh_stream_sshagent.js",
       "js/nassh_stream_sshagent_relay.js",
-      "js/nassh_stream_google_relay.js",
+      "js/nassh_relay.js",
       "js/nassh_google_relay.js",
       "js/nassh_sftp_client.js",
       "js/nassh_sftp_packet.js",
       "js/nassh_sftp_packet_types.js",
       "js/nassh_sftp_status.js",
       "js/nassh_sftp_fsp.js",
-      "js/nassh_agent_message.js",
-      "js/nassh_agent_message_types.js",
-      "js/nassh_agent.js",
-      "js/nassh_agent_backend.js",
-      "js/nassh_agent_backend_gsc.js",
       "js/nassh_command_instance.js",
       "js/nassh_external_api.js",
+      "js/nassh_app.js",
       "js/nassh_background.js"
     ]
   },
